--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,13 @@
   "homepage": "https://github.com/mercadopago/sdk-php",
   "license": "MIT",
   "version": "2.5.3",
-  "config": {
-    "platform": {
-        "php": "7.1"
-    }
-  },
   "require": {
-    "php": ">=7.1.0",
-    "doctrine/common": "^2.6 || ^3.0",
-    "doctrine/annotations": "^1.8"
+    "php": "^8.1",
+    "doctrine/common": "^3.0",
+    "doctrine/annotations": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7",
+    "phpunit/phpunit": "^9.3",
     "symfony/yaml": "~2.5",
     "phpmd/phpmd": "@stable",
     "squizlabs/php_codesniffer": "2.8.1",
